# docker_templates

./: .gitignore  README.md  cli.py  noxfile.py  pyproject.toml
templates/games/docker_minecraft_server/: .env.example  README.md  compose.yml  main.py  pyproject.toml
templates/games/docker_minecraft_server/envs/: README.md  default.example.env
templates/games/docker_minecraft_server/lib/: mc_server_cmds.py
templates/games/docker_minecraft_server/mods_files/: README.md  ex_mods.txt
templates/games/docker_minecraft_server/scripts/: control_mc_server.sh  initial_setup.sh  mc_loadchunk_calculator.py
templates/games/docker_minecraft_server/servers/: README.md
templates/games/docker_minecraft_server/servers/_templates/template_forge-serv/: .env.example  compose.yml  docker-compose.yml
templates/games/docker_minecraft_server/servers/_templates/template_mc-serv/: .env.example  compose.yml  docker-compose.yml
templates/games/docker_minecraft_server/servers/_templates/template_papermc-serv/: .env.example  compose.yml  docker-compose.yml  new_server_setup.sh
templates/games/docker_minecraft_server/servers/development/mc-autoforge/: .env.example
templates/games/docker_minecraft_server/servers/development/mc-bigchadguys/: .env.example  README.md  compose.yml  start_rconcli.sh
templates/games/docker_minecraft_server/servers/development/mc-forge/: .env.example  compose.yml  run_server_cmd.sh
templates/games/docker_minecraft_server/servers/development/mc-forge1/: .env.example
templates/games/docker_minecraft_server/servers/mc-autoforge/: .gitignore  compose.yml.bak
templates/games/docker_minecraft_server/servers/mc-forge/: .env.example  compose.yml
templates/games/docker_minecraft_server/servers/mc-forge-pixelmon1/: README.md  compose.yml
templates/games/docker_minecraft_server/servers/mc-forge/mods/: default.txt  (+1 more)
templates/games/docker_minecraft_server/servers/mc-forge1/: compose.yml
templates/games/docker_minecraft_server/servers/mc-paper1/: .env.example  compose.yml
templates/games/docker_minecraft_server/servers/mc-survival1/: .env.example  compose.yml
templates/games/docker_minecraft_server/tmp/: .env.example  .gitignore  README.md  compose.yml
templates/games/docker_minecraft_server/tmp/envs/: default.example.env
templates/jupyter/docker_jupyter_lab/: README.md  compose.yml  jupyterlab.Dockerfile  pyproject.toml
templates/jupyter/docker_jupyter_lab/config/lab/: jupyter_lab_config.py  overrides.json
(+1442 files in other folders)
