[project]
name = "docker-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "cyclopts>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
]

[tool.uv.workspace]
members = ["templates/games/docker_palworld_server/rpc_mgr"]
