[tool.poetry]
name = "mc-server-control"
version = "0.1.0"
description = "Python package to control Dockerized Minecraft servers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mc_server_control"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
httpx-cache = "^0.7.0"
requests-cache = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
